# GoIT_Homework

./: DZ_6_mod.py  DZ_8_mod.py  DZ_9_mod.py
DZ_10_mod.py/: dz_10_classes.py  dz_10_main.py
DZ_11_mod/: dz_11_classes.py  dz_11_main.py
DZ_12_mod/: dz_12_classes.py  dz_12_main.py
GoIT-8-bot/: Dockerfile  pyproject.toml
GoIT-8-bot/pabot/: AdressBook.py  Interface.py  Message.py  Notes.py  Pabot.py
clean_folder/: setup.py
clean_folder/clean_folder/: clean.py
clean_folder/clean_folder.egg-info/: PKG-INFO  entry_points.txt
